--- a/index.html
+++ b/index.html
@@ -499,7 +499,11 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Jose Rizal Website. All rights reserved.</p>
+            <p>&copy; 2024 Jose Rizal Website. All rights reserved.
+            <br>https://www.quora.com/What-is-the-Rizal-concept-of-being-a-Filipino-and-Filipino-nationalism
+                <br>https://vijandrechristinejoy.medium.com/the-legacy-of-our-national-hero-jose-rizal-afdd24b3a6d9
+                <br>
+            </p>
         </div>
     </footer>
      
